--- a/UI/EduD.html
+++ b/UI/EduD.html
@@ -14,11 +14,11 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="EduD.html">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">SERVICE</a></li>
                     <li><a href="#">CONTACT</a></li>
-                    <li><a href="../logout.php">Logout</a></li>
+                    <li><a href="../logout.php" class="btn2">Logout</a></li>
                 </ul>
             </div>
 
@@ -37,6 +37,34 @@
                  
         </div>
         </div>
+
+        <footer>
+            <div class="footer-container">
+                <div class="footer-content">
+                    <h3>EduD</h3>
+                    <p>Your gateway to mastering web design and development.</p>
+                </div>
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="EduD.html">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social">
+                    <h4>Follow Us</h4>
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2025 EduD. All Rights Reserved.</p>
+            </div>
+        </footer>
         </div>
     </div>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
