Some UI updates

--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
                     <button class="btnn"><a href="index.html">Login</a></button> 
 
                     <p class="link">Don't have an account<br>
-                    <a href="register.php">Sign up</a>
+                    <a href="index.html">Sign up</a>
                     </p>
                     <p class="liw">Log in with</p>
 
